<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="vertical"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/mega" />

    <Button
        android:id="@+id/fiveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/daily_5_odds"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/tenBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/daily_10_odds"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/vipBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/vip"
        android:textSize="24sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:contentDescription="@string/todo1"
        app:srcCompat="@drawable/stake" />
</LinearLayout>
